--- a/d3-Examples/ajd.html
+++ b/d3-Examples/ajd.html
@@ -3,9 +3,8 @@
 <style>
 
 .area {
-  fill: none;
-  stroke: #000;
-  stroke-width: 1.5px;
+  fill: steelblue;
+  clip-path: url(#clip);
 }
 
 .zoom {
@@ -18,9 +17,8 @@
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
-var limit = 60 * 5,
-            duration = 1000,
-            now = new Date(Date.now() - duration)
+  var now = new Date(Date.now() - duration);
+  var duration = 1000;
 var svg = d3.select("svg"),
     margin = {top: 20, right: 20, bottom: 110, left: 40},
     margin2 = {top: 430, right: 20, bottom: 30, left: 40},
@@ -49,15 +47,17 @@ var zoom = d3.zoom()
     .extent([[0, 0], [width, height]])
     .on("zoom", zoomed);
 
-var area = d3.line()
-	.curve(d3.curveBasis)
-    .x(function(d) { return x(now); })
-    .y(function(d) { return y(d.price); });
+var area = d3.area()
+    .curve(d3.curveMonotoneX)
+    .x(function(d) { return x(now-2000); })
+    .y0(height)
+    .y1(function(d) { return y(d.price); });
 
-var area2 = d3.line()
-    .curve(d3.curveBasis)
-    .x(function(d) { return x2(now); })
-    .y(function(d) { return y2(d.price); });
+var area2 = d3.area()
+    .curve(d3.curveMonotoneX)
+    .x(function(d) { return x2(d.date); })
+    .y0(height2)
+    .y1(function(d) { return y2(d.price); });
 
 svg.append("defs").append("clipPath")
     .attr("id", "clip")
@@ -73,9 +73,6 @@ var context = svg.append("g")
     .attr("class", "context")
     .attr("transform", "translate(" + margin2.left + "," + margin2.top + ")");
 
-var aa = focus.append("g")
-var xaxiss = focus.append("g")
-
 d3.csv("sp500.csv",type, function(error, data) {
   console.log("data");
   if (error) throw error;
@@ -85,13 +82,12 @@ d3.csv("sp500.csv",type, function(error, data) {
   x2.domain(x.domain());
   y2.domain(y.domain());
 
-
-  aa.append("path")
+  focus.append("path")
       .datum(data)
       .attr("class", "area")
       .attr("d", area);
 
-  xaxiss.append("g")
+  focus.append("g")
       .attr("class", "axis axis--x")
       .attr("transform", "translate(0," + height + ")")
       .call(xAxis);
@@ -106,7 +102,7 @@ d3.csv("sp500.csv",type, function(error, data) {
       .attr("d", area2);
 
   context.append("g")
-      .attr("class", "axis axis--x")
+      .attr("class", "axiss axis--x")
       .attr("transform", "translate(0," + height2 + ")")
       .call(xAxis2);
 
@@ -149,9 +145,10 @@ function type(d) {
   return d;
 }
 setInterval(function() {
-    var now = new Date(Date.now() - duration);
-            x.domain([now - 300000, now - duration]);
-            xaxiss
+    var now = new Date(Date.now() - 1000);
+            x2.domain([now - 300000, now - 1000]);
+
+            d3.select("g .axiss")
               .transition()
               //.attr("transform", "translate(0," + height + ")")
               .call((d3.axisBottom(x)));
@@ -159,17 +156,6 @@ setInterval(function() {
               //     .duration(duration)
               //     .ease('linear')
               //     .call(x.axis)
-refresh();
+//refresh();
             },1000);
-
-function refresh(){
-
-  d3.csv("sp500.csv",type, function(error, data) {
-    area.date= new Date();
-    area.price = 20+Math.random();
-  });
-}
-
-
-
 </script>
